src/objects/Rollup_Field_Definition__mdt.object
<CustomObject>
    <fields>
        <fullName>Amount_Field__c</fullName>
        <label>Amount Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Attribution_Field__c</fullName>
        <label>Attribution Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions3</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions3</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Attribution_Object__c</fullName>
        <label>Attribution Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions1</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Date_Field__c</fullName>
        <label>Date Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions1</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Attribution_Field__c</fullName>
        <label>Detail Attribution Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions4</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions4</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Detail_Field__c</fullName>
        <label>Detail Field</label>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions2</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Detail_Object__c</fullName>
        <label>Detail Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Rollup_Field_Definitions</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Filter_Group__c</fullName>
        <label>Filter Group</label>
        <referenceTo>Filter_Group__mdt</referenceTo>
        <relationshipLabel>Rollup Field Definitions</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Count</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Largest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smallest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years Donated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor Streak</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rollup_Definition__c</fullName>
        <label>Rollup Definition</label>
        <referenceTo>Rollup_Definition__mdt</referenceTo>
        <relationshipLabel>Rollup Field Definitions</relationshipLabel>
        <relationshipName>Rollup_Field_Definitions_del</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Years_Back__c</fullName>
        <label>Years Back</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rollup Field Definition</label>
    <pluralLabel>Rollup Field Definitions</pluralLabel>
</CustomObject>